Name:                     interactive-brokers
Version:                  0.1
Synopsis:                 Interactive Brokers API
Description:              Interactive Brokers API
Homepage:                 www.github.com/cmahon/interactive-brokers
License:                  BSD3
License-File:             LICENSE
Author:                   Chris Mahon
Maintainer:               cnmahon@gmail.com
Copyright:                Chris Mahon 2014
Category:                 API
Build-Type:               Simple
Stability:                Experimental
Cabal-Version:            >= 1.8
Extra-Source-Files:       README.md

Source-Repository         head
  type:                   git
  location:               git://github.com/cmahon/interactive-brokers.git

Library
  hs-source-dirs:         library
  ghc-options:            -Wall -O2 -threaded -fprof-auto -rtsopts
  default-language:       Haskell2010
  exposed-modules:        API.IB
  other-modules:          API.IB.Constant
                          API.IB.Connection
                          API.IB.Data 
                          API.IB.Enum 
                          API.IB.Request
                          API.IB.Parse
                          API.IB.Util
  build-depends:          base >= 4 && < 5,
                          attoparsec >= 0.10.4.0,
                          bytestring >= 0.10.0.2,
                          containers >= 0.5.0.0,
                          currency >= 0.2.0.0,
                          data-default >= 0.5.3,
                          mtl >= 2.1.2,
                          lens >= 4.0.0,
                          network >= 2.4.1.2,
                          network-simple >= 0.3.0,
                          old-locale >= 1.0.0.5,
                          split >= 0.2.2,
                          time >= 1.4.0.1,
                          transformers >= 0.3.0.0,
                          tz >= 0.0.0.5
